--- a/app/src/main/res/layout/profile_activity.xml
+++ b/app/src/main/res/layout/profile_activity.xml
@@ -13,12 +13,12 @@
 
         <Button
             android:id="@+id/btn_back"
-            android:layout_width="45dp"
-            android:layout_height="40dp"
+            android:layout_width="40dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center"
             android:background="@drawable/ic_back" />
 
         <TextView
-
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -28,7 +28,6 @@
             android:textSize="24sp" />
 
     </LinearLayout>
-
 
     <ImageView
         android:id="@+id/iv_profile_image"
@@ -87,7 +86,6 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-
         <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -100,7 +98,7 @@
             android:layout_height="wrap_content"
             android:hint="UPI ID" />
 
-    </com.google.android.material.textfield.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
 
