--- a/app/src/main/res/layout/activity_firebase_login.xml
+++ b/app/src/main/res/layout/activity_firebase_login.xml
@@ -1,16 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".view.activity.FirebaseLogin">
 
-    <ImageView
-        android:src="@drawable/login_image"
-        android:layout_width="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_height="wrap_content"/>
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/loading_animation"
+        app:lottie_autoPlay="true"
+        app:lottie_fileName="loading_random.json"
+        app:lottie_loop="true"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/add_transaction_progress" />
 
 </LinearLayout>
