--- a/app/src/main/res/layout/activity_transaction.xml
+++ b/app/src/main/res/layout/activity_transaction.xml
@@ -16,12 +16,19 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="0.5"
                 android:background="@color/material_blue">
+
+                <Button
+                    android:id="@+id/btn_back"
+                    android:layout_width="30dp"
+                    android:layout_marginLeft="@dimen/value_10dp"
+                    android:layout_gravity="center"
+                    android:layout_height="30dp"
+                    android:background="@drawable/ic_back" />
 
                 <TextView
                     android:id="@+id/tv_friend_name"
